application_authentication_using_oauth2_proxy/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  namespace: devops
  name: oauth2-proxy
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: oauth2-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --cookie-secure=false
        - --user-id-claim=mail
        - --oidc-groups-claim=ADGroups
        - --redirect-url=https://<application-url>/oauth2/callback
        - --skip-provider-button=false
        - --set-xauthrequest=true
        - --pass-access-token=true
        - --pass-user-headers=true
        - --skip-auth-preflight=false
        - --skip-oidc-discovery
        - --profile-url=https://<oauth_provider_url>/idp/userinfo.openid
        - --oidc-issuer-url=https://<oauth_provider_url>
        - --login-url=https://<oauth_provider_url>/oauth/authorize
        - --redeem-url=https://<oauth_provider_url>/oauth/token
        - --oidc-jwks-url=https://<oauth_provider_url>/oauth/discovery/keys
        - --email-domain=*
        - --show-debug-on-error
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
