application_authentication_using_oauth2_proxy/oauth2-proxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/rewrite-target: /oauth2
  name: oauth2-proxy-ingress
  namespace: devops
spec:
  rules:
  - host: <application-url>
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
        pathType: ImplementationSpecific
